fixed font, footer overlap, and circle centering

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,3 +1,9 @@
 .App {
   text-align: center;
 }
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+.opensans {
+  font-family: "Open Sans", sans-serif;
+}
