--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -30,8 +30,9 @@
   width: 49px;
   height: 49px;
   border-radius: 50%;
-  padding-top: 7%;
-  padding-left: 7%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 @media (max-width: 768px) {
