--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,22 +1,21 @@
-body, html {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-}
 
-* {
-    box-sizing: inherit;
+body{
+    max-width: 100%;
+    overflow-x: hidden;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0%;
 }
 
 .About {
     background-color: #FAFAFA;
     max-width: 100%;
     width: 100%;
-    position: absolute;
+    position: relative;
     color: #000000;
     font-family: 'Source Sans Pro', sans-serif;
+    padding-bottom: -2000px;
 }
 
 .header {
@@ -49,6 +48,7 @@ body, html {
     border-radius: 8px;
     width: 100%;
     position: relative;
+    max-width: 100%;
 }
 
 .main_body {
@@ -82,6 +82,7 @@ body, html {
     box-shadow: 4px 6px 13px -1px rgba(225, 225, 225, 0.25);
     border-radius: 2px;
     text-align: left;
+    max-width: 100%;
 }
 
 .contact {
@@ -104,6 +105,7 @@ h1 {
     font-weight: 700;
     font-family: 'Open Sans';
     font-size: 35px;
+    max-width: 100%;
 }
 
 h2 {
@@ -112,11 +114,13 @@ h2 {
     font-weight: 600;
     font-size: 24px;
     color: #000000;
+    max-width: 100%;
 }
 
 h3 {
     font-size: 16px;
     color: #000000;
+    max-width: 100%;
 }
 
 .card-container {
